--- a/index.html
+++ b/index.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html>
+<head>
+<script src="//j.dev-wovn.io:3000/1" data-wovnio="key=MdaHas" async></script>
+</head>
 <body>
 <div>Source text</div>
+<a href="http://ja.wikipedia.org/wiki/メインページ">Japanese link</a>
 </body>
 </html>
