--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta charset="utf-8">
 <script src="//j.dev-wovn.io:3000/1" data-wovnio="key=MdaHas" async></script>
 </head>
 <body>
 <div>Source text</div>
-<a href="http://ja.wikipedia.org/wiki/メインページ">Japanese link</a>
+<a href="http://ja.wikipedia.org/wiki/メインページ">Main page</a>
 </body>
 </html>
